# gstlibuvch264src

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build-check.yml  publish-release.yml
libuvch264src/: meson.build
libuvch264src/docs/notes/: bmaxpayload-analysis.md  dji-xu-investigation.md  libuvc-fork-adr.md  reconnect-spike.md  scr-investigation.md  v4l2src-spike.md
libuvch264src/src/: frame_pipeline.c  frame_pipeline.h  gstlibuvch264src.c  gstlibuvch264src.h  gstlibuvch264src_error.c  gstlibuvch264src_error.h  gstlibuvch264src_internal.h  meson.build  ptz_control.c  ptz_control.h  sources.txt  spspps_cache.c  spspps_cache.h  spspps_path.h  uvc_device.c  uvc_device.h
patches/: README.md  cve-2026-1991-scan-streaming-nullguard.patch  libuvc-h265-support.patch  uvc15-support.patch
scripts/: build-libuvc.sh  check-libuvc-fork.sh  check-reproducibility.sh  check-source-list.sh
tests/: CMakeLists.txt  fuzz_nal.c  lsan_negotiate.suppressions  mock_libusb.c  mock_libusb.h  mock_libuvc.c  mock_libuvc.h  test_cache.c  test_cache_race.c  test_clock_discontinuity.c  test_compat.c  test_cve_2026_1991.c  test_device_select.c  test_error_map.c  test_framerate_mismatch.c  test_functional.c  test_lifecycle.c  test_live_source.c  test_mock_smoke.c  test_nal_parse.c  test_negotiate.c  test_plugin_load.c  test_pts_drift.c  test_pts_monotonic.c  test_pts_resume.c  test_pts_thread_safety.c  test_ptz.c  test_reconnect.c  test_socket.c  test_sps_bounds.c  test_usb_teardown.c  test_v4l2_probe.c  tsan.suppressions  tsan_cache.suppressions  tsan_pts.suppressions
tests/qa/: av_mux_check.sh
